--- a/usleep.html
+++ b/usleep.html
@@ -19,7 +19,7 @@
 <div id="inner-page">
 <h1>U-Sleep</h1>
  
-  <img src="images/USleepHead.png" width="300" alt="[U-Sleep]">
+  <img src="images/USleepHead.png" width="500" alt="[U-Sleep]">
   
   <h2>Project Description</h2>
 Sleep is one of the most fundamental
@@ -40,8 +40,9 @@ promising treatments.
 
 
 <p>
-  U-Sleep is funded by the <a  href="https://dff.dk/en/front-page?set_language=en">Independent Research Fund Denmark (DFF)</a>
-  <img src='https://dff.dk/@@site-logo-en/dff-logo.png' alt='[DFF Logo]'>
+  U-Sleep is funded by the <a  href="https://dff.dk/en/front-page?set_language=en">Independent Research Fund Denmark (DFF)</a>.
+  <img src='https://dff.dk/@@site-logo-en/dff-logo.png' alt='[DFF
+  Logo]' align="right">
 
 
 <h2>U-Sleep online</h2>
