--- a/usleep.html
+++ b/usleep.html
@@ -19,30 +19,32 @@
 <div id="inner-page">
 <h1>U-Sleep</h1>
  
-  <img src="images/USleepHead.png" width="500" alt="[U-Sleep]">
+  <img src="images/USleepHead.png" alt="[U-Sleep]">
   
   <h2>Project Description</h2>
-Sleep is one of the most fundamental
+ Sleep is one of the most fundamental
 physiological processes, and abnormal sleeping patterns are associated
 with poor health. They may, for example, indicate brain- & heart
-diseases, obesity and di- abetes. The most important tool to study
+diseases, obesity and diabetes. The most important tool to study
 sleep and to diagnose sleep related diseases is polysomnography (PSG),
 a recording of brain and body signals usually performed overnight at
 sleep clinics.  Processing a single PSG requires hours of work from
-clinical personnel. In this project, we develop a novel system
+  clinical personnel.
+
+  <p>
+<a  href="https://dff.dk/en/front-page?set_language=en"><img src='https://dff.dk/@@site-logo-en/dff-logo.png' alt='[DFF
+  Logo]' align="right"></a>In this project, we develop a novel system
 that will support clinicians by automating sleep analysis. We develop
 new deep learning approaches for segmantic segmentation, in particular
   for time series segmentation. The latter allow us  to analyse sleep data faster and with higher accuracy
 than human experts.  The system increases the throughput of sleep
 clinics and ultimately supports a more precise, early-stage diagnosis
 of diseases, allowing for more
-promising treatments.
-
+promising treatments.  
 
 <p>
   U-Sleep is funded by the <a  href="https://dff.dk/en/front-page?set_language=en">Independent Research Fund Denmark (DFF)</a>.
-  <img src='https://dff.dk/@@site-logo-en/dff-logo.png' alt='[DFF
-  Logo]' align="right">
+ 
 
 
 <h2>U-Sleep online</h2>
@@ -51,11 +53,15 @@ promising treatments.
   stages. Use it for free:
   <a href='https://sleep.ai.ku.dk'>https://sleep.ai.ku.dk</a>
 
+   <a href='https://sleep.ai.ku.dk'><img src="images/usleep_web.png"
+   class="eight" alt="[U-Sleep online]"></a>
   
+
 
   <h2>Download</h2>
 
-
+<a  href="https://github.com/perslev/U-Time"><img src="images/usleep.png" alt="[U-Sleep]"></a>
+  
 <h3>U-Sleep and U-Time</h2>
 In <a  href="https://github.com/perslev/U-Time">this repository</a>
 you find our official software package developed for and used to
@@ -103,6 +109,8 @@ Michela Antonelli, Annika Reinke, Spyridon Bakas, Keyvan Farahani,
      Shen, Jaemin Son, Christian Wachinger, Liansheng Wang, Yan Wang,
      Yingda Xia, Daguang Xu, Zhanwei Xu, Yefeng Zheng, Amber L
      Simpson, Lena Maier-Hein, M Jorge Cardoso.
+
+     <a href="https://www.nature.com/articles/s41467-022-30695-9">The Medical Segmentation Decathlon</a>.
      <em>Nature Communications</em> <vol>13</vol>(1):1-13, 2022
    </div>
   
