--- a/usleep.html
+++ b/usleep.html
@@ -91,7 +91,7 @@ the underlying codebase.
 
 
   <h2>Publications</h2>
-  <h3>Contributions to journals, books, and conferences</h3>
+  <h3>Contributions to journals and conferences</h3>
 
    <div class=publication>
 Michela Antonelli, Annika Reinke, Spyridon Bakas, Keyvan Farahani,
