--- a/publications.html
+++ b/publications.html
@@ -40,13 +40,6 @@ Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
   S. Saatchi, and  Rasmus Fensholt. Nation-wide mapping of tree level carbon stocks in Rwanda. <em>Nature Climate Change</em>, accepted 
 </div>
 
-<div class=publication>
-Pengfei Diao, Akshay Pai, Christian Igel, and
-Christian Hedeager Krag.
-Histogram-based unsupervised domain adaptation for medical image classification.
-<em>Medical Image Computing and Computer Assisted
-  Intervention (MICCAI)</em>, LNCS <vol></vol>, Springer, in press
-</div>
 
 <div class=publication>Constanza Fierro, Laura Cabello Piqueras, Jonas
   Lotz, Philip Rust, Joen Rommedahl, Jeppe Klok Due, Christian Igel,
@@ -73,7 +66,7 @@ Histogram-based unsupervised domain adaptation for medical image classification.
 
 <div class=publication>
 	Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx">High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
-<em>American Journal of Gastroenterology</em>, 2022
+<em>American Journal of Gastroenterology</em> <vol>117</vol>(10):1648-1654, 2022
 </div>
 
 <div class=publication>
@@ -105,6 +98,20 @@ based on UAV-LiDAR and machine learning methods</a>.
   Maaløe, and Christian Igel. <a href="https://aaai-sas-2022.github.io/static/media/A_Brief_Overview_of_Unsupervised_Neural_Speech_Representation_Learning__AAAI_SAS_.b293cc96.pdf">A Brief Overview of Unsupervised Neural Speech Representation Learning</a>. <em>The 2nd Workshop on Self-supervised Learning for Audio
   and Speech Processing (AAAI-SAS-2022)</em>, 2022
 </div>
+
+<div class=publication>
+Pengfei Diao, Akshay Pai, Christian Igel, and
+Christian Hedeager Krag.
+Histogram-based unsupervised domain adaptation for medical image
+  classification.
+In
+L. Wang, Q. Dou, P. T. Fletcher,
+S. Speidel, and S. Li, eds.:
+<em>Medical Image Computing and Computer Assisted
+  Intervention (MICCAI)</em>, pp. 755–764, LNCS <vol>13437</vol>,
+  Springer, 2022
+</div>
+
 
 <div class=publication>
 Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
