--- a/publications.html
+++ b/publications.html
@@ -81,7 +81,7 @@ Abdelrahman Mohamed, Hung-yi Lee, Lasse Borgholt, Jakob D. Havtorn,
   Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
 Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort Automatic Knee MRI Segmentation with
   Multi-Planar U-Nets</a>. <em>Journal of Magnetic Resonance
-  Imaging</em>, 2022
+  Imaging</em> <vol>55</vol>(6):1650-1663, 2022
   </div>
 
 <div class=publication>
