--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@ Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
   Philippe Ciais, Ole Mertz, Xiaoye Tong, Sizhuo Li, Gaspard
   Rwanyiziri, Thaulin Dushimiyimana, Alain Ndoli, Valens Uwizeyimana,
   Jens-Peter Lillesø, Fabian Gieseke, Compton Tucker, Sassan
-  S. Saatchi, and  Rasmus Fensholt. Nation-wide mapping of tree level carbon stocks in Rwanda. <em>Nature Climate Change</em>, accepted 
+  S. Saatchi, and  Rasmus Fensholt. Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda. <em>Nature Climate Change</em>, accepted 
 </div>
 
 
