--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <link rel="stylesheet" href="assets/css/style.css">
-<meta name="keywords" content="Christian Igel,publications,neural networks,evolutionary algorithms,evolutionary computation,support vector machines,SVM,SVMs,machine learning"> 
+<meta name="keywords" content="Christian Igel,publications,neural
+networks,evolutionary algorithms,evolutionary computation,support
+vector machines,SVM,SVMs,machine learning">
 <title>Christian's Homepage</title>
 </head>
 
@@ -51,9 +53,13 @@ Professor, Dr. habil.
     </tbody>
  </table>
 </dl>
-<a href="https://www.linkedin.com/in/christianigel"><img  src="images/linkedin-6-128.png" style="height: 24px"></a>
 <a href="https://twitter.com/christian_igel"><img
 src="images/twitter-128.png" style="height: 24px"></a>
+<a rel="me" href="https://mathstodon.xyz/@igel">
+<img
+src="images/Mastodon_Icon.png" style="height: 24px; align:
+center"></a>
+<a href="https://www.linkedin.com/in/christianigel"><img  src="images/linkedin-6-128.png" style="height: 24px"></a>
 <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ&sortby=pubdate"><img
 src="images/pngegg.png" style="height: 24px"></a>
 <h3>Short CV</h3>
