--- a/publications.html
+++ b/publications.html
@@ -32,6 +32,20 @@ scholar profile</a>.
 
 
 <div class=publication>
+Pierre Hiernaux,
+Bil-Assanou Hassane Issoufou,
+Christian Igel,
+Ankit Kariryaa,
+Moussa Kourouma,
+Jérôme Chave,
+Eric Mougin, and
+Patrice Savadogo. Allometric equations to estimate the dry mass of
+  Sahel woody plants from very-high resolution satellite
+  imagery. <em>Forest Ecology and Management</em>, accepted</div>
+
+
+  
+<div class=publication>
 Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
   David Skole, Ankit Kariryaa, Christian Igel, Pierre Hiernaux,
   Philippe Ciais, Ole Mertz, Xiaoye Tong, Sizhuo Li, Gaspard
@@ -40,6 +54,11 @@ Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
   S. Saatchi, and  Rasmus Fensholt. Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda. <em>Nature Climate Change</em>, accepted 
 </div>
 
+<div>
+  Christian Igel and Stefan Oehmcke.
+Remember to correct the bias when using deep learning for regression!
+  <em>K&uuml;nstliche Intelligenz</em>, accepted
+  </div>
 
 <div class=publication>Constanza Fierro, Laura Cabello Piqueras, Jonas
   Lotz, Philip Rust, Joen Rommedahl, Jeppe Klok Due, Christian Igel,
@@ -49,6 +68,15 @@ Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
 <em>International Conference on Frontiers in Handwriting Recognition
   (ICFHR)</em>, accepted
 </div>
+
+<div class=publication>
+  Rasmus Kær Jørgensen, Fiammetta Caccavale, Christian Igel, and Anders
+Søgaard. Are Multilingual Sentiment Models Equally Right for the Right
+  Reasons?
+  <em>BlackboxNLP</em> Workshop at EMNLP 2022, accepted
+</div>
+
+
 
 
 <div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
