--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@ scholar profile</a>.
   Heinemann, Christopher Pal, An Tang, Samuel Kadoury, Luc Soler, Bram
   van Ginneken, Hayit Greenspan, Leo Joskowicz, and Bjoern Menze.
 The Liver Tumor Segmentation Benchmark (LiTS). <em>Medical Image
-  Analysis</em>, 2022
+  Analysis</em>, 2022</div>
 
 
 <div class=publication>
