--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@ Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
   S. Saatchi, and  Rasmus Fensholt. Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda. <em>Nature Climate Change</em>, accepted 
 </div>
 
-<div>
+<div class=publication>
   Christian Igel and Stefan Oehmcke.
 Remember to correct the bias when using deep learning for regression!
   <em>K&uuml;nstliche Intelligenz</em>, accepted
