--- a/publications.html
+++ b/publications.html
@@ -30,47 +30,8 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a>
 
-<div class=publication>Patrick Bilic, Patrick Christ, Hongwei Bran Li, Eugene Vorontsov, Avi
-  Ben-Cohen, Georgios Kaissis, Adi Szeskin, Colin Jacobs, Gabriel
-  Efrain Humpire Mamani, Gabriel Chartrand, Fabian Lohöfer, Julian
-  Walter Holch, Wieland Sommer, Felix Hofmann, Alexandre Hostettler,
-  Naama Lev-Cohain, Michal Drozdzal, Michal Marianne Amitai, Refael
-  Vivanti, Jacob Sosna, Ivan Ezhov, Anjany Sekuboyina, Fernando
-  Navarro, Florian Kofler, Johannes C Paetzold, Suprosanna Shit,
-  Xiaobin Hu, Jana Lipková, Markus Rempfler, Marie Piraud, Jan
-  Kirschke, Benedikt Wiestler, Zhiheng Zhang, Christian Hülsemeyer,
-  Marcel Beetz, Florian Ettlinger, Michela Antonelli, Woong Bae,
-  Míriam Bellver, Lei Bi, Hao Chen, Grzegorz Chlebus, Erik B Dam, Qi
-  Dou, Chi-Wing Fu, Bogdan Georgescu, Xavier Giró-i-Nieto, Felix
-  Gruen, Xu Han, Pheng-Ann Heng, Jürgen Hesser, Jan Hendrik Moltz,
-  Christian Igel, Fabian Isensee, Paul Jäger, Fucang Jia, Krishna
-  Chaitanya Kaluva, Mahendra Khened, Ildoo Kim, Jae-Hun Kim, Sungwoong
-  Kim, Simon Kohl, Tomasz Konopczynski, Avinash Kori, Ganapathy
-  Krishnamurthi, Fan Li, Hongchao Li, Junbo Li, Xiaomeng Li, John
-  Lowengrub, Jun Ma, Klaus Maier-Hein, Kevis-Kokitsi Maninis, Hans
-  Meine, Dorit Merhof, Akshay Pai, Mathias Perslev, Jens Petersen,
-  Jordi Pont-Tuset, Jin Qi, Xiaojuan Qi, Oliver Rippel, Karsten Roth,
-  Ignacio Sarasua, Andrea Schenk, Zengming Shen, Jordi Torres,
-  Christian Wachinger, Chunliang Wang, Leon Weninger, Jianrong Wu,
-  Daguang Xu, Xiaoping Yang, Simon Chun-Ho Yu, Yading Yuan, Miao Yue,
-  Liping Zhang, Jorge Cardoso, Spyridon Bakas, Rickmer Braren, Volker
-  Heinemann, Christopher Pal, An Tang, Samuel Kadoury, Luc Soler, Bram
-  van Ginneken, Hayit Greenspan, Leo Joskowicz, and Bjoern Menze.
-The Liver Tumor Segmentation Benchmark (LiTS). <em>Medical Image
-  Analysis</em>, 2022</div>
 
 
-<div class=publication>
-Pierre Hiernaux,
-Bil-Assanou Hassane Issoufou,
-Christian Igel,
-Ankit Kariryaa,
-Moussa Kourouma,
-Jérôme Chave,
-Eric Mougin, and
-Patrice Savadogo. Allometric equations to estimate the dry mass of
-  Sahel woody plants from very-high resolution satellite
-  imagery. <em>Forest Ecology and Management</em>, accepted</div>
 
 <div class=publication>
   Christian Igel and Stefan Oehmcke.
@@ -105,19 +66,55 @@ Søgaard. Are Multilingual Sentiment Models Equally Right for the Right
 
 
 
+<a name="y23"></a>
 
-<div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
-  Nord-Larsen, Katerina Trepekli, Fabian Gieseke, Christian Igel. Deep Learning Based 3D Point Cloud Regression for Estimating Forest Biomass.
-<em>ACM SIGSPATIAL</em>, accepted
-</div>
+<h4>2023</h4>
 
-
-
+<div class=publication>
+Pierre Hiernaux,
+Bil-Assanou Hassane Issoufou,
+Christian Igel,
+Ankit Kariryaa,
+Moussa Kourouma,
+Jérôme Chave,
+Eric Mougin, and
+Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S0378112722006478">Allometric equations to estimate the dry mass of
+  Sahel woody plants from very-high resolution satellite
+  imagery</a>. <em>Forest Ecology and Management</em> <vol>529</vol>, 2023</div>
 
 
 <a name="y22"></a>
 
-<h4>2022</h4>
+  <h4>2022</h4>
+  <div class=publication>Patrick Bilic, Patrick Christ, Hongwei Bran Li, Eugene Vorontsov, Avi
+  Ben-Cohen, Georgios Kaissis, Adi Szeskin, Colin Jacobs, Gabriel
+  Efrain Humpire Mamani, Gabriel Chartrand, Fabian Lohöfer, Julian
+  Walter Holch, Wieland Sommer, Felix Hofmann, Alexandre Hostettler,
+  Naama Lev-Cohain, Michal Drozdzal, Michal Marianne Amitai, Refael
+  Vivanti, Jacob Sosna, Ivan Ezhov, Anjany Sekuboyina, Fernando
+  Navarro, Florian Kofler, Johannes C Paetzold, Suprosanna Shit,
+  Xiaobin Hu, Jana Lipková, Markus Rempfler, Marie Piraud, Jan
+  Kirschke, Benedikt Wiestler, Zhiheng Zhang, Christian Hülsemeyer,
+  Marcel Beetz, Florian Ettlinger, Michela Antonelli, Woong Bae,
+  Míriam Bellver, Lei Bi, Hao Chen, Grzegorz Chlebus, Erik B Dam, Qi
+  Dou, Chi-Wing Fu, Bogdan Georgescu, Xavier Giró-i-Nieto, Felix
+  Gruen, Xu Han, Pheng-Ann Heng, Jürgen Hesser, Jan Hendrik Moltz,
+  Christian Igel, Fabian Isensee, Paul Jäger, Fucang Jia, Krishna
+  Chaitanya Kaluva, Mahendra Khened, Ildoo Kim, Jae-Hun Kim, Sungwoong
+  Kim, Simon Kohl, Tomasz Konopczynski, Avinash Kori, Ganapathy
+  Krishnamurthi, Fan Li, Hongchao Li, Junbo Li, Xiaomeng Li, John
+  Lowengrub, Jun Ma, Klaus Maier-Hein, Kevis-Kokitsi Maninis, Hans
+  Meine, Dorit Merhof, Akshay Pai, Mathias Perslev, Jens Petersen,
+  Jordi Pont-Tuset, Jin Qi, Xiaojuan Qi, Oliver Rippel, Karsten Roth,
+  Ignacio Sarasua, Andrea Schenk, Zengming Shen, Jordi Torres,
+  Christian Wachinger, Chunliang Wang, Leon Weninger, Jianrong Wu,
+  Daguang Xu, Xiaoping Yang, Simon Chun-Ho Yu, Yading Yuan, Miao Yue,
+  Liping Zhang, Jorge Cardoso, Spyridon Bakas, Rickmer Braren, Volker
+  Heinemann, Christopher Pal, An Tang, Samuel Kadoury, Luc Soler, Bram
+  van Ginneken, Hayit Greenspan, Leo Joskowicz, and Bjoern Menze.
+<a href="https://www.sciencedirect.com/science/article/pii/S1361841522003085">The Liver Tumor Segmentation Benchmark (LiTS)</a>. <em>Medical Image
+    Analysis</em>, 2022</div>
+    
 
 <div class=publication>
 	Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx">High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
@@ -180,9 +177,16 @@ Ensemble Learning for Semantic Segmentation of Ancient Maya
 <div class=publication>
   Stephan Sloth Lorenzen, Christian Igel, and  Mads Nielsen.
   <a href="https://openreview.net/forum?id=kF9DZQQrU0w">Information Bottleneck: Exact Analysis of (Quantized) Neural
-  Networks</a>. <em>International Conference on Learning Representations
+  Networks</a>. In: <em>International Conference on Learning Representations
   (ICLR)</em>, 2022
 </div> 
+
+<div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
+  Nord-Larsen, Katerina Trepekli, Fabian Gieseke, Christian Igel. <a href="https://dl.acm.org/doi/pdf/10.1145/3557915.3561471">Deep Learning Based 3D Point Cloud Regression for Estimating Forest Biomass</a>.
+In: <em>International Conference on Advances in
+  Geographic Information Systems (ACM SIGSPATIAL)</em>, ACM, 2022
+</div>
+
 
 
 <a name="y21"></a>
