--- a/downloads.html
+++ b/downloads.html
@@ -37,7 +37,10 @@
   <a name="mpunet"><br></a>
   <p>
   
-  <h2>Multi-Planar UNet</h2>
+  <h2>Multi-Planar UNet</h2><iframe title="MP-UNet" alt="[MP-UNet]"
+    src="images/multi_view_2.mp4"
+    align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen"><p>Your browser does not support frames, therefore the video is
+    not playing.</p></iframe>
   Download 
  <a href="https://github.com/perslev/MultiPlanarUNet">Multi-Planar
   UNet</a>, a simple and thoroughly evaluated deep learning Python framework for segmentation of arbitrary medical image volumes. The system requires no task-specific information, no human interaction and is based on a fixed model topology and a fixed hyperparameter set, eliminating the process of model selection and its inherent tendency to cause method-level over-fitting. The system is available in open source and does not require deep learning expertise to use. Without task-specific modifications, the system performed better than or similar to highly specialized deep learning methods across 3 separate segmentation tasks. In addition, it ranked 5-th and 6-th in the first and second round of the 2018 Medical Segmentation Decathlon comprising another 10 tasks. The system relies on multi-planar data augmentation which facilitates the application of a single 2D architecture based on the familiar U-Net. Multi-planar training combines the parameter efficiency of a 2D fully convolutional neural network with a systematic train- and test-time augmentation scheme, which allows the 2D model to learn a representation of the 3D image volume that fosters generalization.
@@ -83,7 +86,11 @@ Christian Igel.
 <p>
 
  <h2>woody</h2>
- Download 
+ <iframe title="Woody movie"
+    src="images/KDD2018_fabian_gieseke_christian_igel.mp4"
+    align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
+    <p>Your browser does not support frames, therefore the video is
+    not playing.</p></iframe> Download 
  <a href="https://github.com/gieseke/woody">woody</a>, a Python
   library for constructing very large random forests.
 <h3>Paper describing the package</h3> 
