--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Professor, Dr. habil.
 </dl>
 <a href="https://twitter.com/christian_igel"><img
 src="images/twitter-128.png" style="height: 24px"></a>
-<a rel="me" href="https://mathstodon.xyz/@igel">
+<a rel="me" href="https://ellis.social/@igel">
 <img
 src="images/Mastodon_Icon.png" style="height: 24px; align:
 center"></a>
@@ -104,7 +104,7 @@ Currently, I am particularly interested in
 <li>deep neural networks and stochastic neural networks,
 </li>
 </ul>
-and applications of these methods helping to achieve the sustainable development goals.
+and applications of machine learning that help achieve the sustainable development goals.
 
 
 <h3>Selected Recent Publications</h3>
@@ -124,13 +124,20 @@ Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgen
 
 
 
-<div class=publication>Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
-  Christin Abel, Jennifer Small, Jerome Chave, Laura Vang Rasmussen,
+<div class=publication>
+  Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
+  Christin Abel, Jennifer Small, Jerome Chave, Laura Vang Rasmussen, <iframe title="Counting trees in Africa
+    with computer science"
+    src="https://video.ku.dk/v.ihtml/player.html?token=a75e0b5867a814609abeffc40f5f0435&source=embed&photo%5fid=68945117"
+    align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
+    <p>Your browser does not support frames, therefore the video is
+    not playing.</p></iframe>
   Pierre Hiernaux, Abdoul Aziz Diouf, Laurent Kergoat, Ole Mertz,
   Christian Igel, Fabian Gieseke, Johannes Schöning, Sizhuo Li,
   Katherine Melocik, Jesse Meyer, Scott Sinno, Eric Romero, Erin
   Glennie, Amandine Montagu, Morgane Dendoncker, and Rasmus
-  Fensholt. <a href="https://www.nature.com/articles/s41586-020-2824-5">An unexpectedly large count of trees in the western Sahara
+  Fensholt.
+    <a href="https://www.nature.com/articles/s41586-020-2824-5">An unexpectedly large count of trees in the western Sahara
   and Sahel</a>. <em>Nature</em>, 2020  <a
   href="https://www.nature.com/articles/d41586-020-02830-3"
   class="sup">popular science summary</a>  <a
@@ -138,7 +145,10 @@ Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgen
   class="sup">10 remarkable discoveries from 2020</a>
 </div>
 
+    
+
 <div class=publication>
+  <a href="https://sleep.ai.ku.dk"><img src="images/USleepHead.png"  align="right" style="margin: 0px 10px 10px 10px" width="250" alt="[U-Sleep]"></a>
   Mathias Perslev,
   Sune Darkner,
   Lykke Kempfner,
@@ -160,7 +170,9 @@ Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
 </div>
 
 
-<div class=publication>
+<div class=publication><a href="https://arxiv.org/abs/2007.13532"><img
+      src="images/TandemThumbSmall.png"  align="right" style="vertical-align:bottom"
+      style="margin: 0px 10px 10px 10px" width="200" alt="[Tandem loss]"></a>
  Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
 <a href="https://arxiv.org/abs/2007.13532">Second Order PAC-Bayesian Bounds for the Weighted Majority Vote</a>.
   <em>Advances in Neural Information Processing Systems
@@ -182,8 +194,12 @@ Christian Igel.
 </div>
 
 <div class=publication>
-  Fabian Gieseke and Christian Igel.
-  <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
+ <iframe title="Woody movie" alt="[Woody movie]"
+    src="images/KDD2018_fabian_gieseke_christian_igel.mp4"
+    align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
+    <p>Your browser does not support frames, therefore the video is
+    not playing.</p></iframe>
+  Fabian Gieseke and Christian Igel. <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
   (KDD)</em>, pp. 1445-1454, ACM Press, 2018 <a href="https://github.com/gieseke/woody" class="sup">source code</a>
 </div>
