--- a/publications.html
+++ b/publications.html
@@ -48,14 +48,6 @@ Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
   S. Saatchi, and  Rasmus Fensholt. Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda. <em>Nature Climate Change</em>, accepted 
 </div>
 
-<div class=publication>Constanza Fierro, Laura Cabello Piqueras, Jonas
-  Lotz, Philip Rust, Joen Rommedahl, Jeppe Klok Due, Christian Igel,
-  Desmond Elliott, Carsten Bøcker Pedersen, Israfel Salazar and Anders
-  Søgaard.
-   Date Recognition in Historical Parish Records.
-<em>International Conference on Frontiers in Handwriting Recognition
-  (ICFHR)</em>, accepted
-</div>
 
 <div class=publication>
   Rasmus Kær Jørgensen, Fiammetta Caccavale, Christian Igel, and Anders
@@ -164,6 +156,15 @@ S. Speidel, and S. Li, eds.:
   Springer, 2022
 </div>
 
+<div class=publication>Constanza Fierro, Laura Cabello Piqueras, Jonas
+  Lotz, Philip Rust, Joen Rommedahl, Jeppe Klok Due, Christian Igel,
+  Desmond Elliott, Carsten Bøcker Pedersen, Israfel Salazar and Anders
+  Søgaard.
+   Date Recognition in Historical Parish Records.
+<em>International Conference on Frontiers in Handwriting Recognition
+  (ICFHR)</em>, pp. 49–64, LNCS <vol>13639</vol>,
+  Springer, 2022
+</div>
 
 <div class=publication>
 Thorben Hellweg, Stefan Oehmcke, Ankit Kariryaa, Fabian Gieseke, and Christian Igel.
@@ -185,6 +186,12 @@ Ensemble Learning for Semantic Segmentation of Ancient Maya
   Nord-Larsen, Katerina Trepekli, Fabian Gieseke, Christian Igel. <a href="https://dl.acm.org/doi/pdf/10.1145/3557915.3561471">Deep Learning Based 3D Point Cloud Regression for Estimating Forest Biomass</a>.
 In: <em>International Conference on Advances in
   Geographic Information Systems (ACM SIGSPATIAL)</em>, ACM, 2022
+</div>
+
+<div class=publication>Tianfang Zhang, Lei Li, Christian Igel, Stefan
+  Oehmcke, Fabian Gieseke, and Zhenming Peng. LR-CSNet: Low-Rank Deep
+  Unfolding Network for Image Compressive Sensing.
+In: <em>IEEE International Conference on Computer and Communications (ICCC)</em>, IEEE, 2022
 </div>
 
 
@@ -276,7 +283,12 @@ Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgen
   
 <h4>2020</h4>
 
-<div class=publication>Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
+<div class=publication><iframe title="Counting trees in Africa
+    with computer science"
+    src="https://video.ku.dk/v.ihtml/player.html?token=a75e0b5867a814609abeffc40f5f0435&source=embed&photo%5fid=68945117"
+    align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
+    <p>Your browser does not support frames, therefore the video is
+    not playing.</p></iframe>Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
   Christin Abel, Jennifer Small, Jerome Chave, Laura Vang Rasmussen,
   Pierre Hiernaux, Abdoul Aziz Diouf, Laurent Kergoat, Ole Mertz,
   Christian Igel, Fabian Gieseke, Johannes Schöning, Sizhuo Li,
@@ -428,7 +440,11 @@ Christian Igel.
   <a href="downloads.html#utime" class="sup">source code</a> 
   </div>
 
-<div class=publication>
+<div class=publication><iframe title="MP-UNet" alt="[MP-UNet]"
+    src="images/multi_view_2.mp4"
+    align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
+    <p>Your browser does not support frames, therefore the video is
+    not playing.</p></iframe>
 Mathias Perslev,
     Erik Dam,
     Akshay Pai, and
@@ -469,7 +485,11 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 		  Workshop Track (ICLR 2018 Workshop Track)</em> 2018
 </div>
 
-<div class=publication>
+<div class=publication><iframe title="Woody movie" alt="[Woody movie]"
+    src="images/KDD2018_fabian_gieseke_christian_igel.mp4"
+    align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
+    <p>Your browser does not support frames, therefore the video is
+    not playing.</p></iframe>
   Fabian Gieseke and Christian Igel.
   <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
