--- a/publications.html
+++ b/publications.html
@@ -486,7 +486,7 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 </div>
 
 <div class=publication><iframe title="Woody movie" alt="[Woody movie]"
-    src="images/KDD2018_fabian_gieseke_christian_igel.mp4"
+    src="images/KDD2018_fabian_gieseke_christian_igel.mp4&mute=1"
     align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
     <p>Your browser does not support frames, therefore the video is
     not playing.</p></iframe>
