--- a/publications.html
+++ b/publications.html
@@ -485,11 +485,12 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 		  Workshop Track (ICLR 2018 Workshop Track)</em> 2018
 </div>
 
-<div class=publication><iframe title="Woody movie" alt="[Woody movie]"
+<div class=publication>
+  <!-- <iframe title="Woody movie" alt="[Woody movie]"
     src="images/KDD2018_fabian_gieseke_christian_igel.mp4&mute=1"
     align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
     <p>Your browser does not support frames, therefore the video is
-    not playing.</p></iframe>
+    not playing.</p></iframe> -->
   Fabian Gieseke and Christian Igel.
   <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
