--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@ Christian Igel.
 </div>
 
 <div class=publication>
- <iframe title="Woody movie" alt="[Woody movie]"
+  <!--<iframe title="Woody movie" alt="[Woody movie]"
     src="images/KDD2018_fabian_gieseke_christian_igel.mp4&mute=1"
     align="right"  style="margin: 0px 0px 10px 10px" width="275" allowfullscreen="1" allow="fullscreen">
     <p>Your browser does not support frames, therefore the video is
-    not playing.</p></iframe>
+    not playing.</p></iframe> -->
   Fabian Gieseke and Christian Igel. <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
   (KDD)</em>, pp. 1445-1454, ACM Press, 2018 <a href="https://github.com/gieseke/woody" class="sup">source code</a>
