--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@ href="publications.html">full list</a>.
 I also  maintain a <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ">Google
 scholar profile</a>.
 <p>
+
+<div class=publication>
+Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
+  David Skole, Ankit Kariryaa, Christian Igel, Pierre Hiernaux,
+  Philippe Ciais, Ole Mertz, Xiaoye Tong, Sizhuo Li, Gaspard
+  Rwanyiziri, Thaulin Dushimiyimana, Alain Ndoli, Valens Uwizeyimana,
+  Jens-Peter Lillesø, Fabian Gieseke, Compton Tucker, Sassan
+  S. Saatchi, and  Rasmus Fensholt. <a href="https://doi.org/10.1038/s41558-022-01544-w">Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda</a>. <em>Nature Climate Change</em>, 2022 
+</div>
+
+
+
 <div class=publication>
 Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
 <a href="https://arxiv.org/abs/2106.13624">Chebyshev-Cantelli PAC-Bayes-Bennett Inequality for the Weighted Majority Vote</a>.
