--- a/publications.html
+++ b/publications.html
@@ -39,14 +39,6 @@ Remember to correct the bias when using deep learning for regression!
   <em>K&uuml;nstliche Intelligenz</em>, accepted
   </div>
   
-<div class=publication>
-Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
-  David Skole, Ankit Kariryaa, Christian Igel, Pierre Hiernaux,
-  Philippe Ciais, Ole Mertz, Xiaoye Tong, Sizhuo Li, Gaspard
-  Rwanyiziri, Thaulin Dushimiyimana, Alain Ndoli, Valens Uwizeyimana,
-  Jens-Peter Lillesø, Fabian Gieseke, Compton Tucker, Sassan
-  S. Saatchi, and  Rasmus Fensholt. Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda. <em>Nature Climate Change</em>, accepted 
-</div>
 
 
 <div class=publication>
@@ -118,9 +110,18 @@ Abdelrahman Mohamed, Hung-yi Lee, Lasse Borgholt, Jakob D. Havtorn,
   Joakim Edin, Christian Igel, Katrin Kirchhoff, Shang-Wen Li, Karen Livescu,
   Lars Maaløe, Tara N. Sainath, Shinji Watanabe.
   Self-Supervised Speech Representation Learning: A Review.
-<em>IEEE Journal of Selected Topics in Signal Processing</em>, <vol>16</vol>(6):1179–1210
+<em>IEEE Journal of Selected Topics in Signal Processing</em>,
+  <vol>16</vol>(6):1179–1210, 2022
 </div>
 
+<div class=publication>
+Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
+  David Skole, Ankit Kariryaa, Christian Igel, Pierre Hiernaux,
+  Philippe Ciais, Ole Mertz, Xiaoye Tong, Sizhuo Li, Gaspard
+  Rwanyiziri, Thaulin Dushimiyimana, Alain Ndoli, Valens Uwizeyimana,
+  Jens-Peter Lillesø, Fabian Gieseke, Compton Tucker, Sassan
+  S. Saatchi, and  Rasmus Fensholt. <a href="https://doi.org/10.1038/s41558-022-01544-w">Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda</a>. <em>Nature Climate Change</em>, 2022 
+</div>
     <div class=publication>
   Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
 Igel, and Erik B. Dam. <a href="https://doi.org/10.1002/jmri.27978">Cross-Cohort Automatic Knee MRI Segmentation with
