--- a/publications.html
+++ b/publications.html
@@ -41,35 +41,12 @@ Remember to correct the bias when using deep learning for regression!
   
 
 
-<div class=publication>
-  Rasmus Kær Jørgensen, Fiammetta Caccavale, Christian Igel, and Anders
-Søgaard. Are Multilingual Sentiment Models Equally Right for the Right
-  Reasons?
-  <em>BlackboxNLP</em> Workshop at EMNLP 2022, accepted
-</div>
-
-
 
 <a name="y23"></a>
 
 <h4>2023</h4>
 
-<div class=publication>
-Pierre Hiernaux,
-Bil-Assanou Hassane Issoufou,
-Christian Igel,
-Ankit Kariryaa,
-Moussa Kourouma,
-Jérôme Chave,
-Eric Mougin, and
-Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S0378112722006478">Allometric equations to estimate the dry mass of
-  Sahel woody plants from very-high resolution satellite
-  imagery</a>. <em>Forest Ecology and Management</em> <vol>529</vol>, 2023</div>
 
-
-<a name="y22"></a>
-
-  <h4>2022</h4>
   <div class=publication>Patrick Bilic, Patrick Christ, Hongwei Bran Li, Eugene Vorontsov, Avi
   Ben-Cohen, Georgios Kaissis, Adi Szeskin, Colin Jacobs, Gabriel
   Efrain Humpire Mamani, Gabriel Chartrand, Fabian Lohöfer, Julian
@@ -100,6 +77,23 @@ Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S03
     Analysis</em>, 2022</div>
     
 
+<div class=publication>
+Pierre Hiernaux,
+Bil-Assanou Hassane Issoufou,
+Christian Igel,
+Ankit Kariryaa,
+Moussa Kourouma,
+Jérôme Chave,
+Eric Mougin, and
+Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S0378112722006478">Allometric equations to estimate the dry mass of
+  Sahel woody plants from very-high resolution satellite
+  imagery</a>. <em>Forest Ecology and Management</em> <vol>529</vol>, 2023</div>
+
+
+<a name="y22"></a>
+
+  <h4>2022</h4>
+    
 <div class=publication>
 	Bobby Lo, ZhuoYuan Liu, Flemming Bendtsen, Christian Igel,  Ida Vind, and Johan Burisch. <a href="https://journals.lww.com/ajg/Abstract/9900/High_accuracy_in_classifying_endoscopic_severity.434.aspx">High Accuracy in Classifying Endoscopic Severity in Ulcerative Colitis Using Convolutional Neural Networks</a>.
 <em>American Journal of Gastroenterology</em> <vol>117</vol>(10):1648-1654, 2022
@@ -174,6 +168,15 @@ Ensemble Learning for Semantic Segmentation of Ancient Maya
   I. Dimitrovski, and Žiga Kokalj, eds.: <em>Discover the Mysteries of
   the Maya</em>, pp. 13–19. Jožef Stefan Institute, Jamova cesta 39, 1000
   Ljubljana, Slovenia, 2022
+</div>
+
+
+
+<div class=publication>
+  Rasmus Kær Jørgensen, Fiammetta Caccavale, Christian Igel, and Anders
+Søgaard. Are Multilingual Sentiment Models Equally Right for the Right
+  Reasons?
+  <em>BlackboxNLP</em> Workshop at EMNLP 2022, 2022
 </div>
 
 <div class=publication>
