--- a/publications.html
+++ b/publications.html
@@ -74,7 +74,7 @@ Remember to correct the bias when using deep learning for regression!
   Heinemann, Christopher Pal, An Tang, Samuel Kadoury, Luc Soler, Bram
   van Ginneken, Hayit Greenspan, Leo Joskowicz, and Bjoern Menze.
 <a href="https://www.sciencedirect.com/science/article/pii/S1361841522003085">The Liver Tumor Segmentation Benchmark (LiTS)</a>. <em>Medical Image
-    Analysis</em>, 2022</div>
+    Analysis</em> <vol>84</vol>, 2023</div>
     
 
 <div class=publication>
