--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@ scholar profile</a>.
 <div class=publication>
   Christian Igel and Stefan Oehmcke.
 Remember to correct the bias when using deep learning for regression!
-  <em>K&uuml;nstliche Intelligenz</em>, accepted
+  <em>K&uuml;nstliche Intelligenz</em>, in press
   </div>
   
 
@@ -46,6 +46,18 @@ Remember to correct the bias when using deep learning for regression!
 
 <h4>2023</h4>
 
+<div class=publication>
+  Erik B. Dam,  Arjun D Desai,  Cem M Deniz,  Haresh R Rajamohan,  Ravinder
+  Regatte,  Claudia Iriondo,  Valentina PedoiaSharmila MajumdarMathias
+  Perslev,  Christian Igel,  Akshay Pai,  Sibaji Gaj,  Mingrui
+  Yang,  Kunio
+  Nakamura,  Xiaojuan Li,  Hasan Maqbool,  Ismail Irmakci, 
+  Sang-Eun Song,  Ulas
+  Bagci,  Brian Hargreaves,  Garry Gold, and Akshay Chaudhari. <a href="https://doi.org/10.1016/j.ostima.2023.100087 ">Towards Automatic Cartilage Quantification in Clinical Trials –
+  Continuing from the 2019 IWOAI Knee Segmentation Challenge</a>.
+Osteoarthritis Imaging, 2023
+</div>
+  
 
   <div class=publication>Patrick Bilic, Patrick Christ, Hongwei Bran Li, Eugene Vorontsov, Avi
   Ben-Cohen, Georgios Kaissis, Adi Szeskin, Colin Jacobs, Gabriel
@@ -89,6 +101,15 @@ Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S03
   Sahel woody plants from very-high resolution satellite
   imagery</a>. <em>Forest Ecology and Management</em> <vol>529</vol>, 2023</div>
 
+
+
+<div class=publication>
+  Rasmus Kær Jørgensen,   Oliver Brandt,   Mareike Hartmann,   Xiang Dai,  Christian Igel, and
+  Desmond Elliott. MultiFin: A Dataset for Multilingual Financial
+  NLP. <em>Findings of The 16th Conference of the European Chapter of the
+  Association for Computational Linguistics (EACL Findings)</em>, 2023
+</div>
+  
 
 <a name="y22"></a>
 
