--- a/publications.html
+++ b/publications.html
@@ -46,19 +46,6 @@ Remember to correct the bias when using deep learning for regression!
 
 <h4>2023</h4>
 
-<div class=publication>
-  Erik B. Dam,  Arjun D Desai,  Cem M Deniz,  Haresh R Rajamohan,  Ravinder
-  Regatte,  Claudia Iriondo,  Valentina PedoiaSharmila MajumdarMathias
-  Perslev,  Christian Igel,  Akshay Pai,  Sibaji Gaj,  Mingrui
-  Yang,  Kunio
-  Nakamura,  Xiaojuan Li,  Hasan Maqbool,  Ismail Irmakci, 
-  Sang-Eun Song,  Ulas
-  Bagci,  Brian Hargreaves,  Garry Gold, and Akshay Chaudhari. <a href="https://doi.org/10.1016/j.ostima.2023.100087 ">Towards Automatic Cartilage Quantification in Clinical Trials –
-  Continuing from the 2019 IWOAI Knee Segmentation Challenge</a>.
-Osteoarthritis Imaging, 2023
-</div>
-  
-
   <div class=publication>Patrick Bilic, Patrick Christ, Hongwei Bran Li, Eugene Vorontsov, Avi
   Ben-Cohen, Georgios Kaissis, Adi Szeskin, Colin Jacobs, Gabriel
   Efrain Humpire Mamani, Gabriel Chartrand, Fabian Lohöfer, Julian
@@ -88,6 +75,17 @@ Osteoarthritis Imaging, 2023
 <a href="https://www.sciencedirect.com/science/article/pii/S1361841522003085">The Liver Tumor Segmentation Benchmark (LiTS)</a>. <em>Medical Image
     Analysis</em> <vol>84</vol>, 2023</div>
     
+<div class=publication>
+  Erik B. Dam,  Arjun D. Desai,  Cem M. Deniz,  Haresh R. Rajamohan,  Ravinder
+  Regatte,  Claudia Iriondo,  Valentina Pedoia, Sharmila Majumdar, Mathias
+  Perslev,  Christian Igel,  Akshay Pai,  Sibaji Gaj,  Mingrui
+  Yang,  Kunio
+  Nakamura,  Xiaojuan Li,  Hasan Maqbool,  Ismail Irmakci, 
+  Sang-Eun Song,  Ulas
+  Bagci,  Brian Hargreaves,  Garry Gold, and Akshay Chaudhari. <a href="https://doi.org/10.1016/j.ostima.2023.100087 ">Towards Automatic Cartilage Quantification in Clinical Trials –
+  Continuing from the 2019 IWOAI Knee Segmentation Challenge</a>.
+<em>Osteoarthritis Imaging</em>, 2023
+</div>
 
 <div class=publication>
 Pierre Hiernaux,
