--- a/publications.html
+++ b/publications.html
@@ -97,9 +97,18 @@ Jérôme Chave,
 Eric Mougin, and
 Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S0378112722006478">Allometric equations to estimate the dry mass of
   Sahel woody plants from very-high resolution satellite
-  imagery</a>. <em>Forest Ecology and Management</em> <vol>529</vol>, 2023</div>
+  imagery</a>. <em>Forest Ecology, Management</em> <vol>529</vol>, 2023</div>
 
+<div class=publication>Compton Tucker, Martin Brandt, Pierre Hiernaux, Ankit Kariryaa, Kjeld Rasmussen, and
+Jennifer Small, Christian Igel, Florian Reiner, Katherine Melocik,  Jesse Meyer, Scott
+Sinno, Eric Romero, Erin Glennie, Yasmin Fitts, August Morin, Jorge Pinzon, Devin
+McClain, Paul Morin, Claire Porter, Shane Loeffle, Laurent Kergoat, Bil-Assanou Issoufou, Patrice Savadogo, Jean-Pierre Wigneron, Benjamin Poulter, Philippe Ciais, Robert
+Kaufmann, Ranga Myneni, Sassan Saatchi, and  Rasmus Fensholt. <a
+  href="https://www.nature.com/articles/s41586-022-05653-6">Sub-continental
+  scale carbon stocks of individual trees in African
+  drylands<em>Nature</em> <vol>615</vol>:80-86, 2023</div>
 
+  
 
 <div class=publication>
   Rasmus Kær Jørgensen,   Oliver Brandt,   Mareike Hartmann,   Xiang Dai,  Christian Igel, and
@@ -133,7 +142,7 @@ Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
   Philippe Ciais, Ole Mertz, Xiaoye Tong, Sizhuo Li, Gaspard
   Rwanyiziri, Thaulin Dushimiyimana, Alain Ndoli, Valens Uwizeyimana,
   Jens-Peter Lillesø, Fabian Gieseke, Compton Tucker, Sassan
-  S. Saatchi, and  Rasmus Fensholt. <a href="https://doi.org/10.1038/s41558-022-01544-w">Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda</a>. <em>Nature Climate Change</em>, 2022 
+  S. Saatchi, and  Rasmus Fensholt. <a href="https://doi.org/10.1038/s41558-022-01544-w">Nation-wide mapping of tree-level aboveground carbon stocks in Rwanda</a>. <em>Nature Climate Change</em> <vol>13</vol>:91-97, 2022 
 </div>
     <div class=publication>
   Mathias Perslev, Akshay Pai, Jon Runhaar, Christian
