--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ McClain, Paul Morin, Claire Porter, Shane Loeffle, Laurent Kergoat, Bil-Assanou 
 Kaufmann, Ranga Myneni, Sassan Saatchi, and  Rasmus Fensholt. <a
   href="https://www.nature.com/articles/s41586-022-05653-6">Sub-continental
   scale carbon stocks of individual trees in African
-  drylands<em>Nature</em> <vol>615</vol>:80-86, 2023</div>
+  drylands</a>. <em>Nature</em> <vol>615</vol>:80-86, 2023</div>
   
 <div class=publication>
 Maurice Mugabowindekwe, Martin Brandt, Jerome Chave, Florian Reiner,
