--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,16 @@ Patrice Savadogo. <a href="https://www.sciencedirect.com/science/article/pii/S03
   Sahel woody plants from very-high resolution satellite
   imagery</a>. <em>Forest Ecology, Management</em> <vol>529</vol>, 2023</div>
 
+<div class=publication>
+Sizhuo Li, Martin Brandt, Rasmus Fensholt, Ankit Kariryaa, Christian
+  Igel, Fabian Gieseke, Thomas Nord-Larsen, Stefan Oehmcke, Ask Holm
+  Carlsen, Samuli Junttila, Xiaoye Tong, Alexandre d’Aspremont, and
+  Philippe Ciais. <a
+  href="https://doi.org/10.1093/pnasnexus/pgad076">Deep learning
+  enables image-based tree counting, crown segmentation and height
+  prediction at national scale</a>. <em>PNAS Nexus</em>, 2023
+  </div>
+  
 <div class=publication>Compton Tucker, Martin Brandt, Pierre Hiernaux, Ankit Kariryaa, Kjeld Rasmussen, and
 Jennifer Small, Christian Igel, Florian Reiner, Katherine Melocik,  Jesse Meyer, Scott
 Sinno, Eric Romero, Erin Glennie, Yasmin Fitts, August Morin, Jorge Pinzon, Devin
